--- a/HW1/style.css
+++ b/HW1/style.css
@@ -27,8 +27,7 @@ body {
     overflow: hidden;
     margin: 24px 0;
     position: relative;
-    backdrop-filter: blur(20px);
-    box-shadow:0px 0px 500px #35313b ;
+    box-shadow: 0px 0px 50px #35313b;
 }
 
 .header {
@@ -96,6 +95,7 @@ h1 {
     position: relative;
     text-align: left;
     left: 1in;
+    width: 640px;
 }
 
 .form h2 {
@@ -122,11 +122,12 @@ input {
 }
 
 #seat {
-    width: 432px;
+    width: 431px;
     text-align: center;
 }
 
-#addr_num ,#village{
+#addr_num,
+#village {
     width: 20px;
 }
 
@@ -138,7 +139,9 @@ input {
     width: 304px;
 }
 
-#sub_district ,#district ,#province {
+#sub_district,
+#district,
+#province {
     width: 100px;
 }
 
@@ -154,7 +157,8 @@ input {
     width: 320px;
 }
 
-#phone, #mobile_phone {
+#phone,
+#mobile_phone {
     width: 150.5px;
 }
 
@@ -171,6 +175,7 @@ input {
 #type {
     display: flex;
 }
+
 #togg1 {
     justify-content: center;
     align-items: center;
@@ -178,4 +183,62 @@ input {
 
 .toggle {
     display: grid;
+}
+
+#rex {
+    display: none;
+    width: 300px;
+    position: absolute;
+}
+
+.text1 {
+    margin: 5px 0;
+    position: relative;
+    width: 640px;
+}
+
+.nm {
+    display: grid;
+    width: 640px;
+    text-align: right;
+}
+
+.nm span {
+    margin: 10px 0;
+}
+
+#line {
+    width: 100%;
+    height: 3px;
+    border: #000;
+    top: 5px;
+}
+
+.zz {
+    display: grid;
+    width: 640px;
+    text-align: right;
+}
+
+.bb {
+    display: grid;
+    width: 620px;
+    text-align: right;
+}
+
+.aa {
+    display: grid;
+    width: 640px;
+    text-align: right;
+}
+
+.hh {
+    width: 80%;
+    display: flex;
+    align-items: center;
+
+}
+
+#type9 {
+    margin-left: 100px;
 }
